@@ -10870,10 +10870,8 @@ void clif_parse_GMReqNoChat(int fd,struct map_session_data *sd)
 	if (type == 0)
 		limit = 0 - limit;
 
-	//Temporarily disable chars from muting themselves due to the mysterious "DON'T USE BOT!" message. [Skotlex]
-	//Also, if type is 2 and the ids don't match, this is a crafted hacked packet!
-	//So for now, type 2is just totally disabled.
-	if (type == 2/*&& sd->bl.id != dstsd->bl.id*/)
+	//If type is 2 and the ids don't match, this is a crafted hacked packet!
+	if (type == 2 && sd->bl.id != dstsd->bl.id)
 		return;
 	
 	if (
